--- a/projects/TWTScoreboard/index.html
+++ b/projects/TWTScoreboard/index.html
@@ -34,9 +34,7 @@
       <a href="/projects.html">Projects</a>
       <a href="/blogs.html">Blogs</a>
       <div class="dropdown">
-        <button class="dropbtn">
-          Social
-        </button>
+        <button class="dropbtn">Social</button>
         <div class="dropdown-content">
           <a href="https://github.com/Turkey2098">Github</a>
           <a href="https://glitch.com/@Turkey2098">Glitch</a>
@@ -50,9 +48,15 @@
     <p class="date">7/14/2022</p>
 
     <p>
-      TWT Scoreboard was a project that I made while I was on vaction before my freshman year of highschool. I was struggling to find any good ideas to code and my brother suggested to make
+      TWT Scoreboard was a project that I made while on vacation before my
+      freshman year of high school. I was struggling to find any good ideas to
+      code and my brother suggested I should make an online scorer for the card
+      game pounce. While it did start as a pounce scorer we changed to be a
+      fairly universal scorer. This project also improved my Javascript being
+      one of the most complex project in terms of Javascript that I've made.
+      Click the link below to try it out.
     </p>
-    
+
     <p class="links">
       <a href="https://turkey2098.github.io/TWT_Scoreboard/">Check It Out</a
       >&nbsp;&nbsp;|&nbsp;&nbsp;<a
